fix: update section title width to 100% for better alignment

--- a/src/app/pages/room/room-page.css
+++ b/src/app/pages/room/room-page.css
@@ -64,7 +64,7 @@ section {
   padding: 5px;
 
   .section-title {
-    width: 50%;
+    width: 100%;
     text-align: center;
     padding-bottom: 5px;
 
